--- a/InfoImp-Mandelbrot/InfoImp-Mandelbrot.csproj
+++ b/InfoImp-Mandelbrot/InfoImp-Mandelbrot.csproj
@@ -8,4 +8,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Eto.Forms" Version="2.7.1" />
+      <PackageReference Include="Eto.Platform.Gtk" Version="2.7.1" />
+    </ItemGroup>
+
 </Project>
