Fixed project type

--- a/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
+++ b/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
@@ -5,6 +5,7 @@
         <RootNamespace>InfoImp_Mandelbrot.Wpf</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>WinExe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
