--- a/InfoImp-Mandelbrot.Gtk/InfoImp-Mandelbrot.Gtk.csproj
+++ b/InfoImp-Mandelbrot.Gtk/InfoImp-Mandelbrot.Gtk.csproj
@@ -5,6 +5,7 @@
         <RootNamespace>InfoImp_Mandelbrot.Gtk</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>WinExe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
