--- a/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
+++ b/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
@@ -6,15 +6,22 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>WinExe</OutputType>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+        <PublishReadyToRun>true</PublishReadyToRun>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Eto.Forms" Version="2.7.1" />
-      <PackageReference Include="Eto.Platform.Wpf" Version="2.7.1" />
+        <PackageReference Include="Eto.Forms" Version="2.7.1" />
+        <PackageReference Include="Eto.Platform.Wpf" Version="2.7.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\InfoImp-Mandelbrot\InfoImp-Mandelbrot.csproj" />
+        <ProjectReference Include="..\InfoImp-Mandelbrot\InfoImp-Mandelbrot.csproj" />
+        <Content Include="..\Libmandelbrot\target\x86_64-pc-windows-msvc\release\mandelbrot.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Pack>true</Pack>
+        </Content>
     </ItemGroup>
-
 </Project>
