--- a/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
+++ b/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
@@ -8,7 +8,7 @@
         <OutputType>WinExe</OutputType>
         <PublishSingleFile>true</PublishSingleFile>
         <SelfContained>true</SelfContained>
-        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+        <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
         <PublishReadyToRun>true</PublishReadyToRun>
     </PropertyGroup>
 
