--- a/InfoImp-Mandelbrot.Gtk/InfoImp-Mandelbrot.Gtk.csproj
+++ b/InfoImp-Mandelbrot.Gtk/InfoImp-Mandelbrot.Gtk.csproj
@@ -18,7 +18,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\InfoImp-Mandelbrot\InfoImp-Mandelbrot.csproj" />
-        <Content Include="..\Libmandelbrot\target\x86_64-unknown-linux-gnu\release\libmandelbrot.so">
+        <Content Include="..\Libmandelbrot\target\x86_64-unknown-linux-gnu\release\libmandelbrot_rayon.so">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Pack>true</Pack>
+        </Content>
+        <Content Include="..\Libmandelbrot\target\x86_64-unknown-linux-gnu\release\libmandelbrot_ocl.so">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <Pack>true</Pack>
         </Content>
