--- a/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
+++ b/InfoImp-Mandelbrot.Wpf/InfoImp-Mandelbrot.Wpf.csproj
@@ -19,7 +19,15 @@
 
     <ItemGroup>
         <ProjectReference Include="..\InfoImp-Mandelbrot\InfoImp-Mandelbrot.csproj" />
-        <Content Include="..\Libmandelbrot\target\x86_64-pc-windows-msvc\release\mandelbrot.dll">
+        <Content Include="..\Libmandelbrot\target\x86_64-pc-windows-msvc\release\mandelbrot_ocl.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Pack>true</Pack>
+        </Content>
+        <Content Include="..\Libmandelbrot\target\x86_64-pc-windows-msvc\release\mandelbrot_rayon.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Pack>true</Pack>
+        </Content>
+        <Content Include="..\Libmandelbrot\OpenCL.lib">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <Pack>true</Pack>
         </Content>
